No separate style sheet
Basic responsive layout using bootstrap. Uses padding, font, and text classes.
The ratio classes are cool!

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 header{
     padding:30px;
 }
-main{
+/*main{
     width:calc(75% - 60px);
     float:left;
     padding:30px;
@@ -16,5 +16,4 @@ footer{
     clear:both;
     padding:30px;
     text-align: center;
-}
-
+}*/
